<resources>
    <string name="app_name">XCDeclare</string>
    <string name="declareEmailAddressDefault">declare@xcleague.com</string>
    <string name="filePathDefault">/sdcard/XCSoarData/Default.tsk</string>
    <string name="ParseButtonText">Fetch Task</string>
    <string name="BHPALabel">Your BHPA No.</string>
    <string name="StartGridLabel">Start Grid Reference</string>
    <string name="TurnpointGridsLabel">Turnpoint Grid References</string>
    <string name="FinishGridLabel">Finish Grid Reference</string>
    <string name="OtherBHPAsLabel">Other BHPA No.s</string>
    <string name="DeclareButtonText">Declare</string>
    <string name="title_activity_settings">Settings</string>
    <string name="declareEmailLabel">Declare Email:</string>
    <string name="filePathLabel">File Pathway:</string>
    <string name="introParagraph">Easy task declaration for the UK XC League.  First, set up your task in XCSoar, then run this utility to generate an email declaration.  Suggestions and feedback: richard.darling@me.com MHGC</string>




    <string name="declareEmailKey">declareEmailKey</string>
    <string name="filePathKey">filePathKey</string>
    <string name="BHPAKey">BHPAKey</string>
    <!-- Strings related to Settings -->


    <string name="requestStorageReadExplanation"> In order to fetch you flight details you need to first grant this app read permissions. </string>
    <string name="ok">OK</string>
    <string name="fileNotFound"> Could not find Default.tsk file, check your file path settings</string>
    <string name="parserException"> There was an error parsing Default.tsk file. </string>
    <string name="noFlightData"> There was missing or incorrect flight data.</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="newBHPA">Enter New BHPA:</string>
    <string name="noBHPAWarning"> No BHPA Number entered.</string>
    <string name="warning">Warning</string>
    <string name="notLegalTriangle"> Warning Not Legal Triangle!</string>
    <string name="notLegalTriangleMessage"> The flight data you have entered is not a legal Triangle. "\n" The Start and Finish coordinates are not the same "\n" Would you like to Declare with current locations, or change the finish to match the start?</string>
    <string name="makeChange"> Change </string>
    <string name="declare">Declare</string>
    <string name="Cancel">Cancel</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
