<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.XCDeclare.edwardcarron.xcdeclare.DeclareActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/DeclareLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BHPALabel"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/BHPAView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/BHPAEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit BHPA" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartGridLabel"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/startGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/startEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Start" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/TurnpointLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TurnpointGridsLabel"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/turnsEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Turns" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FinishGridLabel"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/finishGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/finishEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Finish" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/otherBHPALayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OtherBHPAsLabel"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/otherBHPAEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Edit Other BHPAs" />

            <Button
                android:id="@+id/declareBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="declare" />

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>
